# Serious-Sam-Android

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.txt  InstallApk.sh  README.md  appveyor.yml  bridge.js  build.gradle  call-tree.txt  gradle.properties  local.properties  print-stack.bat  print-stack.sh  serious-sam.jks  todo.txt  update.json  version.properties
Serious-Engine/Sources/: .gitignore  CMakeLists.txt  bison.simple  config.h  config.h.in
Serious-Engine/Sources/AndroidAdapters/: CMakeLists.txt  LargeColor.h  SeriousSam.cpp  android-adapters.h  binding-callbacks.h  commons.cpp  gles_adapter.cpp  gles_adapter.h  gles_adapter_unused.cpp  gles_glMessageCallback.cpp  playerCommons.h  stringFormatter.h  test.cpp  win-constants.h
Serious-Engine/Sources/AndroidBindings/: CMakeLists.txt  SeriousSam.cpp  bindings.cpp  bindings.h  glmocks.cpp  key_codes.h  seriousSamAndroid.cpp  seriousSamAndroid.h
Serious-Engine/Sources/DecodeReport/: DecodeReport.cpp
Serious-Engine/Sources/DedicatedServer/: CMakeLists.txt  DedicatedServer.cpp
Serious-Engine/Sources/Depend/: Dependency.cpp  UtilityDepend.cpp
Serious-Engine/Sources/Ecc/: CMakeLists.txt  Ecc.vcxproj  Main.cpp  Parser.y  ecc.sln
Serious-Engine/Sources/Ecc/ecc-msvc/: CMakeLists.txt
Serious-Engine/Sources/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  StdH.h  revision.h
Serious-Engine/Sources/Engine/Base/: Anim.cpp  Anim.h  Assert.h  Base.h  CRC.cpp  CRC.h  CRCTable.cpp  CTString.cpp  CTString.h  CTString.inl  Changeable.cpp  Console.cpp  Console.h  Directory.cpp  ErrorReporting.cpp  ErrorReporting.h  FLEX.skl  FileName.cpp  FileName.h  IFeel.cpp  Input.cpp  Input.h  LargeColor.h  Lists.cpp  Memory.cpp  Memory.h  Parser.cpp  Parser.h  Parser.y  ParsingSymbols.h  Priority.inl  Profiling.cpp  Profiling.h  ProfilingEnabled.h  ProgressHook.cpp  Registry.cpp  Relations.cpp  ReplaceFile.cpp  ReplaceFile.h  Scanner.cpp  (+23 more)
Serious-Engine/Sources/Engine/Brushes/: Brush.cpp  Brush.h  BrushArchive.cpp  BrushExport.cpp  BrushIO.cpp  BrushImport.cpp  BrushMip.cpp  BrushPolygon.cpp  BrushSector.cpp  BrushShadows.cpp  BrushTransformed.h  BrushTriangularize.cpp
Serious-Engine/Sources/Engine/Classes/: MovableEntity.es  PlayerEntity.es
Serious-Engine/Sources/Engine/Entities/: Entity.cpp  Entity.h  EntityClass.cpp  EntityClass.h  EntityClass_AllClasses.cpp  EntityCollision.cpp  EntityCopying.cpp  EntityProperties.cpp  EntityProperties.h  FieldBSPTesting.cpp  NearestPolygon.cpp  PlayerCharacter.cpp
Serious-Engine/Sources/Engine/Graphics/: Adapter.cpp  Benchmark.cpp  Color.cpp  Color.h  DepthCheck.cpp  DisplayMode.cpp  DrawPort.cpp  DrawPort_Particles.cpp  DrawPort_RenderScene.cpp  Fog.cpp  Fog_internal.h  Font.cpp  GfxLibrary.cpp  GfxLibrary.h  Gfx_Direct3D.cpp  Gfx_Direct3D_Colors.cpp  Gfx_OpenGL.cpp  Gfx_OpenGL_Shaders.cpp  (+21 more)
Serious-Engine/Sources/EngineGui/: DlgCreateAnimatedTexture.cpp  DlgCreateEffectTexture.cpp  DlgCreateNormalTexture.cpp  EngineGUI.cpp  FileRequester.cpp
Serious-Engine/Sources/Entities/: AmmoItem.es  BasicEffects.es  Beast.es  BloodSpray.es  Bullet.es  CMakeLists.txt  Camera.es  Debris.es  Effector.es  Elemental.es  EnemyBase.es  Global.es  Headman.es  KeyItem.es  Light.es  Lightning.es  ModelHolder2.es  MovingBrush.es  Player.es  PlayerAnimator.es  PlayerWeapons.es  Projectile.es  PyramidSpaceShip.es  Scorpman.es  Walker.es  WorldBase.es
Serious-Engine/Sources/EntitiesMP/: AirElemental.es  AirShockwave.es  AmmoItem.es  AmmoPack.es  AnimationChanger.es  AnimationHub.es  ArmorItem.es  BackgroundViewer.es  BasicEffects.es  Beast.es  BigHead.es  BloodSpray.es  Boneman.es  Bullet.es  CMakeLists.txt  Camera.es  CameraMarker.es  CannonBall.es  CannonRotating.es  CannonStatic.es  ChainsawFreak.es  Copier.es  Counter.es  CrateBus.es  CrateRider.es  CreditsHolder.es  DebugEntityStatesDisplay.es  Demon.es  DestroyableArchitecture.es  Devil.es  DevilMarker.es  DoorController.es  Dragonman.es  EffectMarker.es  Effector.es  Elemental.es  EnemyBase.es  EnemyCounter.es  EnemyMarker.es  EnemySpawner.es  (+66 more)
Serious-Engine/Sources/GameGUIMP/: DlgPlayerSettings.cpp  GameGUI.cpp
Serious-Engine/Sources/GameMP/: CMakeLists.txt  Camera.cpp  CompMessage.cpp  CompModels.cpp  Computer.cpp  Console.cpp  Controls.cpp  Game.cpp  Game.h  LCDDrawing.cpp  LCDDrawing.h  LoadingHook.cpp  Map.cpp  SEColors.h  SessionProperties.cpp  StdAfx.cpp  StdAfx.h  WEDInterface.cpp
Serious-Engine/Sources/Graphics/: Adapter.cpp  Benchmark.cpp  Color.cpp  DepthCheck.cpp  DrawPort.cpp  DrawPort_Particles.cpp  Fog.cpp  GfxLibrary.cpp  GfxLibrary.h  GfxProfile.cpp  Gfx_Direct3D_Textures.cpp  Gfx_OpenGL_Textures.cpp  Gfx_Shaders.h  Gfx_wrapper.cpp  Gfx_wrapper.h  Graphics.cpp  ImageInfo.cpp  MultiMonitor.cpp  Shader.cpp  Stereo.cpp  TextureEffects.cpp  ViewPort_android.cpp
Serious-Engine/Sources/MakeFONT/: MakeFONT.cpp
Serious-Engine/Sources/Modeler/: DlgCreateReflectionTexture.cpp  DlgCreateSpecularTexture.cpp  DlgPgInfoAttachingPlacement.cpp  MainFrm.cpp  Modeler.cpp  ModelerDoc.cpp  ModelerView.cpp  ScriptView.cpp
Serious-Engine/Sources/SeriousSam/: CMakeLists.txt  CmdLine.cpp  Credits.cpp  GLSettings.cpp  LCDDrawing.cpp  LCDDrawing.h  LevelInfo.cpp  SeriousSam.cpp  SeriousSam.h  SeriousSam.original.cpp  StdH.h  VarList.cpp  VarList.h
Serious-Engine/Sources/SeriousSkaStudio/: DlgBarTreeView.cpp  Parser.cpp  Scanner.l  SeriousSkaStudio.cpp  SeriousSkaStudioDoc.cpp  SeriousSkaStudioView.cpp
Serious-Engine/Sources/WorldEditor/: BrowseWindow.cpp  Browser.cpp  ChildFrm.cpp  CustomComboWnd.cpp  DlgGenerateFBM.cpp  DlgLightAnimationEditor.cpp  DlgPgPrimitive.cpp  DlgPgRenderingStatistics.cpp  DlgPgTexture.cpp  DlgTipOfTheDay.cpp  DlgWorldSettings.cpp  MainFrm.cpp  TerrainEditing.cpp  TerrainInterface.cpp  ViewTexture.cpp  WorldEditor.cpp  WorldEditorDoc.cpp  WorldEditorView.cpp
Serious-Engine/Sources/amp11lib/: CMakeLists.txt  amp3dec.cpp
Serious-Engine/Sources/libogg/: CMakeLists.txt
Serious-Engine/Sources/libtremor/: CMakeLists.txt  info.c  misc.h
Serious-Engine/Sources/libvorbis/: CMakeLists.txt
(+335 files in other folders)
