cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
SET(CMAKE_USE_RELATIVE_PATHS OFF)
set(PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(SE_SOURCES "${PROJECT_ROOT}/Serious-Engine/Sources")
set(LIBS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/libs)

if (ANDROID)
    add_compile_options("-Wnon-pod-varargs")
    add_compile_options("-Wextern-initializer")
    add_compile_options("-Wwritable-strings")
    add_compile_options("-Wno-write-strings")
    add_compile_options("-Winvalid-offsetof")
    add_compile_options("-U__STRICT_ANSI__")
endif ()

if (NOT ANDROID)
    file(READ "local.properties" local)
    string(REGEX MATCH "ndk.dir=([^\r\n]*)" _ ${local})
    set(ndk ${CMAKE_MATCH_1})
    string(REPLACE "\\\\" "/" ndk ${ndk})
    string(REPLACE "\\:" ":" ndk ${ndk})
    message("ndk: ${ndk}")
    include_directories("${ndk}/sysroot/usr/include")
endif ()

set(SE_GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/Serious-Engine/Gen")
file(MAKE_DIRECTORY "${SE_GENERATED_DIR}")

message("PROJECT_ROOT: ${PROJECT_ROOT}")
message("SSA_VERSION: ${SSA_VERSION}")
message("SE_GENERATED_DIR: ${SE_GENERATED_DIR}")

add_subdirectory(Serious-Engine)
