configure_file(config.h.in ${SE_GENERATED_DIR}/config.h @ONLY)

add_compile_options("-I${CMAKE_CURRENT_SOURCE_DIR}")
add_compile_options("-I${SE_GENERATED_DIR}")

add_subdirectory(amp11lib)
add_subdirectory(AndroidAdapters)
add_subdirectory(AndroidBindings)
add_subdirectory(libvorbis)
add_subdirectory(libogg)
add_subdirectory(Ecc)
add_subdirectory(Engine)
add_subdirectory(EntitiesMP)
add_subdirectory(EngineGui)
add_subdirectory(GameMP)
add_subdirectory(SeriousSam)
