configure_file(config.h.in ${SE_GENERATED_DIR}/config.h @ONLY)

function(add_subdir _dir)
    get_filename_component(_fullpath "${_dir}" REALPATH)
    if (EXISTS "${_fullpath}" AND EXISTS "${_fullpath}/CMakeLists.txt")
        get_property(_included_dirs GLOBAL PROPERTY GlobalAddSubdirectoryOnceIncluded)
        list(FIND _included_dirs "${_fullpath}" _used_index)
        if (${_used_index} EQUAL -1)
            set_property(GLOBAL APPEND PROPERTY GlobalAddSubdirectoryOnceIncluded "${_fullpath}")
            add_subdirectory(${_dir} ${ARGN})
        endif()
    else()
        message(WARNING "add_subdir: Can't find ${_fullpath}/CMakeLists.txt")
    endif()
endfunction(add_subdir)

add_compile_options("-I${CMAKE_CURRENT_SOURCE_DIR}")
add_compile_options("-I${SE_GENERATED_DIR}")

add_subdir(amp11lib)
add_subdir(AndroidAdapters)
add_subdir(AndroidBindings)
add_subdir(libtremor)
add_subdir(libogg)
add_subdir(Ecc)
add_subdir(Engine)
if (FIRST_ENCOUNTER)
	add_subdir(Entities)
else()
	add_subdir(H3D)
	add_subdir(EntitiesMP)
endif()
add_subdir(GameMP)
add_subdir(SeriousSam)
